<resources>
    <string name="app_name">Verda</string>
    <string name="lista">lista</string>
    <string name="agregar">agregar</string>
    <string name="verdad_o_reto">Verdad o Reto</string>
    <string name="press_button">Presiona un boton</string>
    <string name="verdad">verdad</string>
    <string name="reto">reto</string>
    <string name="Salvado">Salvado! Pasa turno.</string>
    <string name="nueva_frase">Agregar nueva frase</string>
    <string name="agregar_aqui">Agregar aquí</string>
</resources>
